--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,15 @@
 
 }
 
+#userTable {
+  margin: auto;
+}
+
+#navi{
+  min-width: 1200px;
+}
+
+
 .customerDetails{
   background-color: rgb(28, 119, 122);
   border-style: solid;
@@ -11,6 +20,8 @@
   margin: auto;
   margin-bottom: 50px;
   border-radius: 30px;
+  padding-left: 10%;
+  padding-right: 10%;
 }
 
 .neg {
@@ -45,14 +56,14 @@
 
 
 .posts {
-  border: 2px solid rgb(91, 12, 88);
-  border-radius: 10px;   /*pyöristys */
-  padding: 10px; 
+  border: 3px solid rgb(91, 12, 88);
+  border-radius: 20px;   /*pyöristys */
+  padding: 15px; 
   margin-bottom: 10px;
 }
 
 #root {
-  max-width: 1280px;
+  max-width: auto;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -74,38 +85,3 @@
   color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
